02-orquestadores/entrega_orquestación/02-distributed/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: todo-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 3000
